Update background runner
